--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Minku</title>
-
+<meta name="viewport" content="width=device-width, user-scalable=false;">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/jquery-2.1.1.js"></script>
